languages/io-automaton-fe/src/test/resources/valid/imports/AutomatonWithStarImport.ioautomaton
package valid.imports;

import valid.imports.*;

automaton AutomatonWithStarImport{

	input Test a;
	output Double b;
	
	state S;
	initial S;
}