languages/io-automaton-fe/src/test/resources/invalid/NoInitialState.ioautomaton
package invalid;

automaton NoInitialState {
    input int a;
    output int b;
    
    state S;   
}